k8s/manifests/namespaces.yml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: game-2048
spec: {}
status: {}
