k8s/manifests/deployment-2048.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: deployment-2048
  name: deployment-2048
  namespace: game-2048
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment-2048
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: deployment-2048
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: eks-myk8s-7y_node_group
      containers:
      - image: public.ecr.aws/l6m2t8p7/docker-2048:latest
        name: docker-2048
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "900m"
status: {}
