k8s/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: deployment-2048
  name: service-2048
  namespace: game-2048
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: deployment-2048
  type: NodePort
status:
  loadBalancer: {}
